# RentItNow

./: .gitmodules  CMakeLists.txt  README.md
.cmake/: functions.cmake
.github/workflows/: ci.yml
Code/: .clang-format  .clang-tidy  CMakeLists.txt
Code/API/: CMakeLists.txt
Code/API/include/: Interface.h
Code/API/src/: Interface.cpp
Code/BookingManager/: CMakeLists.txt
Code/BookingManager/include/: BookingManager.h
Code/BookingManager/src/: BookingManager.cpp
Code/CarManager/: CMakeLists.txt
Code/CarManager/include/: CarManager.h
Code/CarManager/src/: CarManager.cpp
Code/Common/: CMakeLists.txt
Code/Common/include/: CoutSilencer.h  StructureInterface.h
Code/Common/src/: CoutSilencer.cpp
Code/Core/: CMakeLists.txt
Code/Core/include/: Core.h
Code/Core/src/: Core.cpp
Code/DatabaseManager/: CMakeLists.txt
Code/DatabaseManager/include/: DatabaseManager.h
Code/DatabaseManager/src/: DatabaseManager.cpp
Code/RentItNow/: CMakeLists.txt
Code/RentItNow/include/: Boss.h  CoutSilencer.h  Server.h  User.h
Code/RentItNow/src/: Boss.cpp  User.cpp  main.cpp
Code/UnitTests/: CMakeLists.txt
Code/UnitTests/src/: UnitTests.cpp
Code/UnitTests/src/BookingManager/: BookingManagerTest.cpp
Code/UnitTests/src/Core/: CoreTest.cpp
Code/UnitTests/src/DatabaseManager/: DatabaseManagerTest.cpp
Code/UnitTests/src/UserManager/: UserManagerTest.cpp
Code/User/: CMakeLists.txt
Code/User/src/: main.cpp
Code/UserManager/: CMakeLists.txt
Code/UserManager/include/: UserManager.h
Code/UserManager/src/: UserManager.cpp
