add_subdirectory("ThirdParty")
add_subdirectory("Common")
add_subdirectory("API")
add_subdirectory("Core")
add_subdirectory("UserManager")
add_subdirectory("CarManager")
add_subdirectory("BookingManager")
add_subdirectory("RentItNow")
add_subdirectory("DatabaseManager")
add_subdirectory("UnitTests")